Use Jackson for json support now
And add jsonignore to model relations

--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
         <!-- JSON Support -->
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
-            <artifactId>jersey-media-moxy</artifactId>
+            <artifactId>jersey-media-json-jackson</artifactId>
         </dependency>
 
         <!--Hibernate-->
