--- a/pom.xml
+++ b/pom.xml
@@ -46,8 +46,9 @@
 
         <!-- JSON Support -->
         <dependency>
-            <groupId>org.glassfish.jersey.media</groupId>
-            <artifactId>jersey-media-json-jackson</artifactId>
+            <groupId>com.owlike</groupId>
+            <artifactId>genson</artifactId>
+            <version>1.4</version>
         </dependency>
 
         <!--Hibernate-->
