--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,13 @@
             <version>4.12</version>
         </dependency>
 
+        <!--Hash password-->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.10</version>
+        </dependency>
+
     </dependencies>
     <properties>
         <jersey.version>2.25.1</jersey.version>
